src/components/FoodPlaceList/Card/Images/FoodPlaceImages.scss
$imageWidth: 300px;
$fullScreenImageWidth: 30vw;

$imageHeight: 200px;
$fullScreenImageHeight: 100%;

.food-place-images-wrapper {
    align-items: center;
    > .food-place-images-container {
        height: $imageHeight;
        width: $imageWidth;
        position: relative;
        > .food-place-images {
            height: $imageHeight;
            width: $imageWidth;
            overflow: hidden;
            > .food-place-image-container {
                height: $imageHeight;
                width: $imageWidth;
                background-color: transparent;
                > img {
                    object-fit: cover;
                    height: $imageHeight;
                    width: $imageWidth;
                    border-radius: 12px 12px 0 0;
                }
            }
            > .heart {
                position: absolute;
                top: 20px;
                right: 20px;
            }
        }
        > .carousel-button {
            position: absolute;
            top: 50%;
            transform: translateY(-50%);
            border: none;
            cursor: pointer;
            background-color: var(--bg);
            border-radius: 50%;
            padding: 5px;
            height: 1.4rem;
            width: 1.4rem;
            font-size: 0.8rem;
            opacity: 0;
            transition: opacity 0.1s;
            &.carousel-button-prev {
                left: 0.4rem;
            }

            &.carousel-button-next {
                right: 0.4rem;
            }
            &:hover {
                opacity: 1;
            }
        }
    }
    > .carousel-dots {
        display: none;
    }
    &.full-screen {
        width: $fullScreenImageWidth;
        > .food-place-images-container {
            width: $fullScreenImageWidth;
            height: $fullScreenImageHeight;
            > .food-place-images {
                width: $fullScreenImageWidth;
                height: $fullScreenImageHeight;
                > .food-place-image-container {
                    width: $fullScreenImageWidth;
                    height: $fullScreenImageHeight;
                    > img {
                        width: $fullScreenImageWidth;
                        height: $fullScreenImageHeight;
                        border-radius: 12px 0 0 12px;
                    }
                }
            }
        }

        @media (max-width: 480px) {
            width: 100%;
            > .food-place-images-container {
                width: 100%;
                height: 200px;
                > .food-place-images {
                    width: 100%;
                    height: 200px;
                    > .food-place-image-container {
                        width: 100%;
                        height: 200px;
                        > img {
                            width: 100%;
                            height: 200px;
                            border-radius: 8px 8px 0 0;
                        }
                    }
                }
            }
        }
    }
}

@media screen and (max-width: 768px) {
    .food-place-images-wrapper {
        > .food-place-images-container {
            > .food-place-images {
                overflow-x: auto;
                scroll-snap-coordinate: 0 0;
                scroll-snap-points-x: repeat(100%);
                scroll-snap-type: x mandatory;
                -ms-overflow-style: none; /* Internet Explorer 10+ */
                scrollbar-width: none; /* Firefox */
                &::-webkit-scrollbar {
                    display: none; /* Safari and Chrome */
                }
                > .food-place-image-container {
                    display: flex;
                    align-items: center;
                    scroll-snap-align: start;
                }
            }
            > .carousel-button {
                display: none;
            }
        }
        > .carousel-dots {
            display: flex;
            justify-content: center;
            gap: 5px;
            height: 10px;
            width: 100%;
            margin-top: 1rem;
            > .dot {
                height: 10px;
                width: 10px;
                background-color: #bbb;
                border-radius: 50%;
                &.selected {
                    background-color: var(--color-grey);
                }
            }
        }
    }
}

